# lib-epp-br

./: README.md
libepp-api/: CMakeLists.txt  main.cpp
libepp-api/certs/: client.pem  index.html  root.pem
libepp-nicbr-1.8/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
libepp-nicbr-1.8/config/: libepp_dox
libepp-nicbr-1.8/docs/schemas/: asn-1.0.xsd  brdomain-1.0.xsd  brorg-1.0.xsd  contact-1.0.xsd  domain-1.0.xsd  epp-1.0.xsd  eppcom-1.0.xsd  host-1.0.xsd  ipnetwork-1.0.xsd  secDNS-1.0.xsd
libepp-nicbr-1.8/docs/templates/: login.xml  logout.xml
libepp-nicbr-1.8/include/: Action.H  AsnCheck.H  AsnCheckCmd.H  AsnCheckRsp.H  AsnCreate.H  AsnCreateCmd.H  AsnCreateRsp.H  AsnDelete.H  AsnDeleteCmd.H  AsnInfo.H  AsnInfoCmd.H  AsnInfoRsp.H  AsnRenew.H  AsnRenewCmd.H  AsnRenewRsp.H  AsnTransfer.H  AsnTransferCmd.H  AsnTransferRsp.H  AsnUpdate.H  AsnUpdateCmd.H  BeautifierHandlers.H  BrDomainCheck.H  BrDomainCheckCmd.H  BrDomainCheckRsp.H  BrDomainCommon.H  BrDomainCreate.H  BrDomainCreateCmd.H  BrDomainCreateRsp.H  BrDomainInfo.H  BrDomainInfoCmd.H  BrDomainInfoRsp.H  BrDomainPanDataRsp.H  BrDomainRenew.H  BrDomainRenewRsp.H  BrDomainUpdate.H  BrDomainUpdateCmd.H  BrDomainUpdateRsp.H  BrOrgCheck.H  BrOrgCheckCmd.H  BrOrgCheckRsp.H  (+84 more)
libepp-nicbr-1.8/lib/: Makefile  Makefile.am  Makefile.in
libepp-nicbr-1.8/lib/.deps/: libepp_nicbr_1_8_a-AsnCheck.Po  libepp_nicbr_1_8_a-AsnCreate.Po  libepp_nicbr_1_8_a-AsnDelete.Po  libepp_nicbr_1_8_a-AsnInfo.Po  libepp_nicbr_1_8_a-AsnRenew.Po  libepp_nicbr_1_8_a-AsnTransfer.Po  libepp_nicbr_1_8_a-AsnUpdate.Po  libepp_nicbr_1_8_a-BeautifierHandlers.Po  libepp_nicbr_1_8_a-BrDomainCheck.Po  libepp_nicbr_1_8_a-BrDomainCheckRsp.Po  libepp_nicbr_1_8_a-BrDomainCreate.Po  libepp_nicbr_1_8_a-BrDomainInfo.Po  libepp_nicbr_1_8_a-BrDomainUpdate.Po  libepp_nicbr_1_8_a-BrOrgCheck.Po  libepp_nicbr_1_8_a-BrOrgCheckRsp.Po  libepp_nicbr_1_8_a-BrOrgCreate.Po  libepp_nicbr_1_8_a-BrOrgInfo.Po  libepp_nicbr_1_8_a-BrOrgUpdate.Po  libepp_nicbr_1_8_a-CommonData.Po  libepp_nicbr_1_8_a-ContactCheck.Po  libepp_nicbr_1_8_a-ContactCheckRsp.Po  libepp_nicbr_1_8_a-ContactCreate.Po  libepp_nicbr_1_8_a-ContactInfo.Po  libepp_nicbr_1_8_a-ContactUpdate.Po  libepp_nicbr_1_8_a-DomErrorHandler.Po  libepp_nicbr_1_8_a-DomParser.Po  libepp_nicbr_1_8_a-DomParserCommon.Po  libepp_nicbr_1_8_a-DomainCheck.Po  libepp_nicbr_1_8_a-DomainCheckRsp.Po  libepp_nicbr_1_8_a-DomainCreate.Po  libepp_nicbr_1_8_a-DomainDelete.Po  libepp_nicbr_1_8_a-DomainInfo.Po  libepp_nicbr_1_8_a-DomainRenew.Po  libepp_nicbr_1_8_a-DomainUpdate.Po  libepp_nicbr_1_8_a-FileUtil.Po  libepp_nicbr_1_8_a-Greeting.Po  libepp_nicbr_1_8_a-IpNetworkCheck.Po  libepp_nicbr_1_8_a-IpNetworkCreate.Po  libepp_nicbr_1_8_a-IpNetworkDelete.Po  libepp_nicbr_1_8_a-IpNetworkInfo.Po  (+9 more)
libepp-nicbr-1.8/samples/: HOWTO  Makefile  TestClient.cpp
libepp-nicbr-1.8/src/lib/: AsnCheck.cpp  AsnCreate.cpp  AsnDelete.cpp  AsnInfo.cpp  AsnRenew.cpp  AsnTransfer.cpp  AsnUpdate.cpp  BeautifierHandlers.cpp  BrDomainCheck.cpp  BrDomainCheckRsp.cpp  BrDomainCreate.cpp  BrDomainInfo.cpp  BrDomainUpdate.cpp  BrOrgCheck.cpp  BrOrgCheckRsp.cpp  BrOrgCreate.cpp  BrOrgInfo.cpp  BrOrgUpdate.cpp  CommonData.cpp  ContactCheck.cpp  ContactCheckRsp.cpp  ContactCreate.cpp  ContactInfo.cpp  ContactUpdate.cpp  DomErrorHandler.cpp  DomParser.cpp  DomParserCommon.cpp  DomainCheck.cpp  DomainCheckRsp.cpp  DomainCreate.cpp  DomainDelete.cpp  DomainInfo.cpp  DomainRenew.cpp  DomainUpdate.cpp  FileUtil.cpp  Greeting.cpp  IpNetworkCheck.cpp  IpNetworkCreate.cpp  IpNetworkDelete.cpp  IpNetworkInfo.cpp  (+9 more)
libepp-nicbr-1.8/src/shepp/: AsnFunctions.H  BrOrgFunctions.H  ContactFunctions.H  DomainFunctions.H  IpNetworkFunctions.H  Makefile  Makefile.am  Makefile.in  PollFunctions.H  SheppCommand.H  SheppCommandFunctions.H  SheppGlobal.H  SheppObjSet.H  SheppPrint.H  SheppStrUtil.H  shepp.cpp
libepp-nicbr-1.8/src/shepp/.deps/: shepp.Po
libepp-nicbr-1.8/unit_test/: AsnCheckTest.H  AsnCheckTest.cpp  AsnCreateTest.H  AsnCreateTest.cpp  AsnDeleteTest.H  AsnDeleteTest.cpp  AsnInfoTest.H  AsnInfoTest.cpp  AsnRenewTest.H  AsnRenewTest.cpp  AsnTransferTest.H  AsnTransferTest.cpp  AsnUpdateTest.H  AsnUpdateTest.cpp  BrDomainCheckTest.H  BrDomainCheckTest.cpp  BrDomainCreateTest.H  BrDomainCreateTest.cpp  BrDomainInfoTest.H  BrDomainInfoTest.cpp  BrDomainRenewTest.H  BrDomainRenewTest.cpp  BrDomainUpdateTest.H  BrDomainUpdateTest.cpp  BrOrgCheckTest.H  BrOrgCheckTest.cpp  BrOrgCreateTest.H  BrOrgCreateTest.cpp  BrOrgInfoTest.H  BrOrgInfoTest.cpp  BrOrgUpdateTest.H  BrOrgUpdateTest.cpp  ContactCheckTest.H  ContactCheckTest.cpp  ContactCreateTest.H  ContactCreateTest.cpp  ContactInfoTest.H  ContactInfoTest.cpp  ContactUpdateTest.H  ContactUpdateTest.cpp  (+56 more)
