##  Copyright (C) 2009 Registro.br. All rights reserved.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
# 1. Redistribution of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
# 
# THIS SOFTWARE IS PROVIDED BY REGISTRO.BR ``AS IS AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIE OF FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
# EVENT SHALL REGISTRO.BR BE LIABLE FOR ANY DIRECT, INDIRECT,
# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
# BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
# OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
# TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
# USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
# DAMAGE.
 ##
## $Id: Makefile.tmp 1006 2009-02-19 20:29:57Z rafael $ ## 

lib_LIBRARIES = libepp-nicbr-1.8.a

libepp_nicbr_1_8_a_SOURCES = $(top_srcdir)/src/lib/StrUtil.cpp \
	$(top_srcdir)/src/lib/Login.cpp \
	$(top_srcdir)/src/lib/TransportTLSCommon.cpp \
	$(top_srcdir)/src/lib/TransportTLS.cpp 	\
	$(top_srcdir)/src/lib/Greeting.cpp \
	$(top_srcdir)/src/lib/Poll.cpp \
	$(top_srcdir)/src/lib/CommonData.cpp \
	$(top_srcdir)/src/lib/ContactCheck.cpp \
	$(top_srcdir)/src/lib/DomParserCommon.cpp \
	$(top_srcdir)/src/lib/DomParser.cpp \
	$(top_srcdir)/src/lib/DomErrorHandler.cpp \
	$(top_srcdir)/src/lib/ContactCheckRsp.cpp \
	$(top_srcdir)/src/lib/ContactCreate.cpp \
	$(top_srcdir)/src/lib/ContactInfo.cpp \
	$(top_srcdir)/src/lib/ContactUpdate.cpp \
	$(top_srcdir)/src/lib/DomainCheck.cpp \
	$(top_srcdir)/src/lib/DomainCheckRsp.cpp \
	$(top_srcdir)/src/lib/DomainCreate.cpp \
	$(top_srcdir)/src/lib/DomainInfo.cpp \
	$(top_srcdir)/src/lib/DomainRenew.cpp \
	$(top_srcdir)/src/lib/DomainUpdate.cpp \
	$(top_srcdir)/src/lib/DomainDelete.cpp \
	$(top_srcdir)/src/lib/Session.cpp \
	$(top_srcdir)/src/lib/FileUtil.cpp \
	$(top_srcdir)/src/lib/BeautifierHandlers.cpp \
	$(top_srcdir)/src/lib/BrDomainCheck.cpp \
	$(top_srcdir)/src/lib/BrDomainCheckRsp.cpp \
	$(top_srcdir)/src/lib/BrDomainInfo.cpp \
	$(top_srcdir)/src/lib/BrDomainCreate.cpp \
	$(top_srcdir)/src/lib/BrDomainUpdate.cpp \
	$(top_srcdir)/src/lib/BrOrgCheck.cpp \
	$(top_srcdir)/src/lib/BrOrgCheckRsp.cpp \
	$(top_srcdir)/src/lib/BrOrgInfo.cpp \
	$(top_srcdir)/src/lib/BrOrgCreate.cpp \
	$(top_srcdir)/src/lib/BrOrgUpdate.cpp \
	$(top_srcdir)/src/lib/IpNetworkCreate.cpp \
	$(top_srcdir)/src/lib/IpNetworkDelete.cpp \
	$(top_srcdir)/src/lib/IpNetworkCheck.cpp \
	$(top_srcdir)/src/lib/IpNetworkRenew.cpp \
	$(top_srcdir)/src/lib/IpNetworkTransfer.cpp \
	$(top_srcdir)/src/lib/IpNetworkInfo.cpp \
	$(top_srcdir)/src/lib/IpNetworkUpdate.cpp \
	$(top_srcdir)/src/lib/AsnCheck.cpp \
	$(top_srcdir)/src/lib/AsnCreate.cpp \
	$(top_srcdir)/src/lib/AsnDelete.cpp \
	$(top_srcdir)/src/lib/AsnRenew.cpp \
	$(top_srcdir)/src/lib/AsnTransfer.cpp \
	$(top_srcdir)/src/lib/AsnInfo.cpp \
	$(top_srcdir)/src/lib/AsnUpdate.cpp

libepp_nicbr_1_8_a_CPPFLAGS = -I ../include
